Bug 507038 - Cantor not connecting with Qalculate
Summary: Cantor not connecting with Qalculate
Status: RESOLVED FIXED
Alias: None
Product: cantor
Classification: Applications
Component: qualculate-backend (other bugs)
Version First Reported In: 25.04.3
Platform: Arch Linux Linux
: NOR normal
Target Milestone: ---
Assignee: Cantor Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-07-14 17:59 UTC by Roger Júnio
Modified: 2025-08-17 19:36 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Outputs when opening Cantor via terminal and following the steps to reproduce the problem (221.92 KB, image/png)
2025-07-14 17:59 UTC, Roger Júnio
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Roger Júnio 2025-07-14 17:59:16 UTC
Created attachment 183233 [details]
Outputs when opening Cantor via terminal and following the steps to reproduce the problem

SUMMARY
The Cantor program is not integrating with Qalculate! (GTK) version 5.6.0.

STEPS TO REPRODUCE
1. Open Cantor
2. Select the Qalculate framework and press "OK."
3. In the new window, enter an expression (e.g., 2+2) in the Session 1 input field, and then click to calculate the input. Only "Calculating..." appears; the result is not loaded.

OBSERVED RESULT
There is no output, just the continuous status "Calculating..."

EXPECTED RESULT
The result of the account.

SOFTWARE/OS VERSIONS
Operating System: Arch Linux 
KDE Plasma Version: 6.4.2
KDE Frameworks Version: 6.16.0
Qt Version: 6.9.1
Kernel Version: 6.15.6-arch1-1 (64-bit)
Graphics Platform: Wayland
Processors: 16 × AMD Ryzen 7 5700U with Radeon Graphics
Memory: 16 GiB of RAM (15.0 GiB usable)
Graphics Processor: AMD Radeon Graphics
Manufacturer: Positivo Bahia - VAIO
Product Name: VJFE59F11X-B0821H

ADDITIONAL INFORMATION
Cantor was installed from the official Arch repository.
Comment 1 Bug Janitor Service 2025-07-14 18:51:49 UTC
A possibly relevant merge request was started @ https://invent.kde.org/education/cantor/-/merge_requests/112
Comment 2 Alexander Semke 2025-07-17 06:44:50 UTC
Git commit e3e9b9bbef5c93d1c7301592100a8fdd74a1eecb by Alexander Semke, on behalf of Antonio Rojas.
Committed on 17/07/2025 at 06:41.
Pushed by asemke into branch 'master'.

Fix qalculate backend with recent versions of libqalculate

The latest qalculate version prompts about enabling the "autocalc" feature at startup and expects user input, which makes the cantor interface hang.

Start qalc with the default values to bypass the prompt.

M  +1    -1    src/backends/qalculate/qalculatesession.cpp

https://invent.kde.org/education/cantor/-/commit/e3e9b9bbef5c93d1c7301592100a8fdd74a1eecb
Comment 3 Antonio Rojas 2025-07-17 08:33:17 UTC
Git commit 0067b08f9031d660b31c86db357b02c3b90fa8a1 by Antonio Rojas.
Committed on 17/07/2025 at 08:20.
Pushed by arojas into branch 'release/25.08'.

Fix qalculate backend with recent versions of libqalculate

The latest qalculate version prompts about enabling the "autocalc" feature at startup and expects user input, which makes the cantor interface hang.

Start qalc with the default values to bypass the prompt.


(cherry picked from commit e3e9b9bbef5c93d1c7301592100a8fdd74a1eecb)

Co-authored-by: Antonio Rojas <arojas@archlinux.org>

M  +1    -1    src/backends/qalculate/qalculatesession.cpp

https://invent.kde.org/education/cantor/-/commit/0067b08f9031d660b31c86db357b02c3b90fa8a1
Comment 4 Roger Júnio 2025-08-17 19:36:09 UTC
Very good!
I'm returning to reinforce the confirmation that one of the Cantor updates resolved the issue of integration with Qalculate; for now, problem solved - my thanks to everyone involved.