Fix qalculate backend with recent versions of libqalculate

The latest qalculate version prompts about enabling the "autocalc" feature at startup and expects user input, which makes the cantor interface hang.

Start qalc with the default values to bypass the prompt.

BUG: 507038